--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="columns">
     <div class="column">
-    <div id="pino"><script>include("articles/pino.txt", "pino")</script></div>
+    <div id="epimosa"><script>include("articles/Wasting_Light.md", "epimosa")</script></div>
     <div class="column">
     </div>
     <div class="column">
