--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Git the Road, Jack!</title>
+  <title>The Git Billboard</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/showdown.min.js"></script>
@@ -15,7 +15,7 @@
 
 <div class="head">
   <div class="headerobjectswrapper">
-    <header>Git the Road, Jack!</header>
+    <header>The Git Billboard</header>
   </div>
   <div class="subhead">Made in Paris, France - Thursday March 14, 2019</div>
 </div>
@@ -24,7 +24,8 @@
 
   <div class="columns">
     <div class="column">
-    <div id="epimosa"><script>include("articles/Wasting_Light.md", "epimosa")</script></div>
+      <div id="epimosa"><script>include("articles/Wasting_Light.md", "epimosa")</script></div>
+    </div>
     <div class="column">
     </div>
     <div class="column">
